@@ -1,6 +1,9 @@
 == Mon Nov  9 23:38:33 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
 * Added ability to create new email via a hash or hash-like object. <mikel>
+* Moved all of the Part init into the Message class.  Part now just uses Message's init,
+  also moved all the attachment related functions into Message.  As Part is a subclass
+  of message, you shouldn't see any interface changes here.
 
 == Fri Nov  6 22:52:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>
 
